# ccny_rgbd_tools

ccny_openni_launch/: CMakeLists.txt  package.xml
ccny_rgbd/: CMakeLists.txt  package.xml
ccny_rgbd/cfg/: FeatureDetector.cfg  GftDetector.cfg  OrbDetector.cfg  RGBDImageProc.cfg  StarDetector.cfg
ccny_rgbd/include/ccny_rgbd/: types.h
ccny_rgbd/launch/: visual_odometry.launch  vo+mapping.launch
ccny_rgbd/src/apps/: keyframe_mapper.cpp  visual_odometry.cpp
ccny_rgbd_tools/: CMakeLists.txt  package.xml
lib_rgbdtools/: CMakeLists.txt  package.xml
