<?xml version="1.0"?>
<package>
  <name>ccny_openni_launch</name>
  <version>0.0.0</version>
  <description>ccny_openni_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kp@todo.todo">kp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
 	<!--
  <build_depend>topic_tools</build_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  -->
  
  <run_depend>openni2_camera</run_depend>


	<run_depend>msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
   <!--  <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
