<package>
  <name>ccny_rgbd_tools</name>
  <version>0.1.0</version>
  <description>The stack contains ROS applications for visual odometry and mapping using RGB-D cameras. </description>
  <author>Ivan Dryanovski</author>
  <maintainer email="ivan.dryanovski@gmail.com">Ivan Dryanovski</maintainer>
  <license>GPL</license>
  <url type="website">http://wiki.ros.org/ccny_rgbd</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ccny_rgbd</run_depend>
  <!--<run_depend>ccny_openni_launch</run_depend>-->
  <!--<run_depend>ccny_rgbd_data</run_depend>-->
  <!--<run_depend>lib_rgbdtools</run_depend>-->
  <export>
    <metapackage/>
  </export>
</package>

